@@ -3,6 +3,8 @@ package HeyDoctor.HeyDoctor_Backend.domain.location.service;
 import HeyDoctor.HeyDoctor_Backend.domain.location.dto.LocationRequestDto;
 import HeyDoctor.HeyDoctor_Backend.domain.location.dto.LocationResponseDto;
 import HeyDoctor.HeyDoctor_Backend.global.exception.ErrorCode;
+import org.slf4j.Logger; // 로거 import
+import org.slf4j.LoggerFactory; // 로거 import
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.web.reactive.function.client.WebClient;
@@ -16,6 +18,9 @@ import java.util.List;
 @Service
 public class LocationService {
 
+    // 1. 로거 필드 추가
+    private static final Logger logger = LoggerFactory.getLogger(LocationService.class);
+
     private final WebClient webClient;
 
     @Value("${api.kakao.rest-key}")
@@ -27,9 +32,6 @@ public class LocationService {
         this.webClient = webClientBuilder.baseUrl(KAKAO_LOCAL_URL).build();
     }
 
-    /**
-     * 좌표를 받아서 행정구역 정보 반환 (비동기, 논블로킹)
-     */
     public Mono<LocationResponseDto> getAdministrativeRegion(LocationRequestDto request) {
         String query = String.format("x=%s&y=%s",
                 URLEncoder.encode(String.valueOf(request.getLongitude()), StandardCharsets.UTF_8),
@@ -40,21 +42,20 @@ public class LocationService {
                 .uri("?" + query)
                 .header("Authorization", "KakaoAK " + KAKAO_API_KEY)
                 .retrieve()
-                // API 응답 코드가 200이 아닌 경우 에러 처리
                 .onStatus(status -> status.is4xxClientError() || status.is5xxServerError(),
                         clientResponse -> Mono.error(new RuntimeException(ErrorCode.INTERNAL_SERVER_ERROR.getMessage())))
                 .bodyToMono(Map.class)
-                .map(response -> {
-                    // JSON 응답에서 문서(documents) 목록을 추출
+                // 2. bodyToMono 다음에 doOnNext를 사용하여 응답 데이터를 로그로 출력
+                .doOnNext(responseMap -> logger.info("Response from Kakao API: {}", responseMap))
+                .mapNotNull(response -> {
                     @SuppressWarnings("unchecked")
                     List<Map<String, Object>> documents = (List<Map<String, Object>>) response.get("documents");
 
-                    if (documents.isEmpty()) {
+                    if (documents == null || documents.isEmpty()) {
                         return null;
                     }
 
-                    // 첫 번째 문서에서 행정구역 정보 추출
-                    Map<String, Object> regionInfo = documents.get(0);
+                    Map<String, Object> regionInfo = documents.getFirst();
                     String sido = (String) regionInfo.get("region_1depth_name");
                     String sigungu = (String) regionInfo.get("region_2depth_name");
                     String eupmyeondong = (String) regionInfo.get("region_3depth_name");
